force-app/main/default/objects/Time_Tracker_Task_Assignment__c/Time_Tracker_Task_Assignment__c.object-meta.xml
<CustomObject>
    <description>Time Tracker Task Assignments</description>
    <label>Time Tracker Task Assignment</label>
    <nameField>
        <label>Time Tracker Task Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Tracker Task Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>