force-app/main/default/objects/Time_Tracker_Task_Assignment__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the task assignment is billable or not. For example: if set to true, all time tracked on this project for the associated task will be marked as billable.</description>
    <inlineHelpText>Whether the task assignment is billable or not. For example: if set to true, all time tracked on this project for the associated task will be marked as billable.</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>