force-app/main/default/objects/Time_Tracker_Task_Assignment__c/fields/ID_Harvest__c.field-meta.xml
<CustomField>
    <fullName>ID_Harvest__c</fullName>
    <description>Unique Harvest ID for the task assignment</description>
    <externalId>true</externalId>
    <label>Harvest ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>