force-app/main/default/objects/Time_Tracker_Task_Assignment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An object containing the id, name, and code of the associated project.</description>
    <inlineHelpText>An object containing the id, name, and code of the associated project.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Time Tracker Task Assignments</relationshipLabel>
    <relationshipName>Time_Tracker_Task_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>